--- a/css/lxl.css
+++ b/css/lxl.css
@@ -59,35 +59,53 @@
   display: none; }
 
 .spinner {
-  width: 60px;
+  width: 50px;
   height: 60px;
+  text-align: center;
+  font-size: 10px;
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  margin: auto;
-  background-color: #2A3F54;
-  -webkit-animation: rotateplane 1.2s infinite ease-in-out;
-  animation: rotateplane 1.2s infinite ease-in-out; }
+  margin: auto; }
 
-@-webkit-keyframes rotateplane {
-  0% {
-    -webkit-transform: perspective(120px); }
-  50% {
-    -webkit-transform: perspective(120px) rotateY(180deg); }
-  100% {
-    -webkit-transform: perspective(120px) rotateY(180deg) rotateX(180deg); } }
-@keyframes rotateplane {
-  0% {
-    transform: perspective(120px) rotateX(0deg) rotateY(0deg);
-    -webkit-transform: perspective(120px) rotateX(0deg) rotateY(0deg); }
-  50% {
-    transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg);
-    -webkit-transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg); }
-  100% {
-    transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
-    -webkit-transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg); } }
+.spinner > div {
+  background-color: #1d73b9;
+  height: 100%;
+  width: 6px;
+  display: inline-block;
+  -webkit-animation: stretchdelay 1.2s infinite ease-in-out;
+  animation: stretchdelay 1.2s infinite ease-in-out; }
+
+.spinner .rect2 {
+  -webkit-animation-delay: -1.1s;
+  animation-delay: -1.1s; }
+
+.spinner .rect3 {
+  -webkit-animation-delay: -1.0s;
+  animation-delay: -1.0s; }
+
+.spinner .rect4 {
+  -webkit-animation-delay: -0.9s;
+  animation-delay: -0.9s; }
+
+.spinner .rect5 {
+  -webkit-animation-delay: -0.8s;
+  animation-delay: -0.8s; }
+
+@-webkit-keyframes stretchdelay {
+  0%, 40%, 100% {
+    -webkit-transform: scaleY(0.4); }
+  20% {
+    -webkit-transform: scaleY(1); } }
+@keyframes stretchdelay {
+  0%, 40%, 100% {
+    transform: scaleY(0.4);
+    -webkit-transform: scaleY(0.4); }
+  20% {
+    transform: scaleY(1);
+    -webkit-transform: scaleY(1); } }
 a {
   text-decoration: none !important;
   cursor: pointer; }
@@ -635,6 +653,18 @@ html, body {
 .block-one > p {
   text-align: center;
   margin: 10px 0; }
+
+.block-one > p:nth-of-type(3) {
+  text-align: left;
+  padding-left: 35%; }
+
+.block-one > p:nth-of-type(4) {
+  text-align: left;
+  padding-left: 35%; }
+
+.block-one > p:nth-of-type(5) {
+  text-align: left;
+  padding-left: 35%; }
 
 .big-number {
   font-size: 20px;
