--- a/css/lxl.scss
+++ b/css/lxl.scss
@@ -67,7 +67,12 @@
 .icon-jiajian-:before {
   content: "\e666";
 }
-
+.menu-icon{
+  margin: 0 5px;
+  width: 16px;
+  height: 16px;
+  vertical-align: -10%;
+}
 //载入动画
 .loading-wrapper {
   width: 100%;
@@ -286,8 +291,11 @@ html, body {
           display: inline-block;
           padding: 10px;
           i:nth-of-type(1) {
-            padding: 0 10px;
+            //padding: 0 10px;
+            //font-size: 16px;
+            float: right;
             font-size: 16px;
+            @include transition(transform .3s);
           }
           i:nth-of-type(2) {
             float: right;
@@ -340,7 +348,7 @@ html, body {
           background: linear-gradient(#334556, #2C4257), #2A3F54;
           box-shadow: rgba(0, 0, 0, .25) 0 1px 0, inset rgba(255, 255, 255, .16) 0 1px 0;
         }
-        i:nth-of-type(2) {
+        i:nth-of-type(1) {
           @include transform(rotate(90deg));
         }
       }
@@ -632,11 +640,11 @@ html, body {
         text-align: center;
         a {
           letter-spacing: 3px;
-          i:nth-of-type(1) {
-            font-size: 30px !important;
-            padding: 0 12px 0 8px !important;
+          .menu-icon{
+            width: 30px;
+            height: 30px;
           }
-          i:nth-of-type(2) {
+          i:nth-of-type(1) {
             display: none;
           }
         }
